--- a/app/src/main/res/layout/fragment_tomorrow.xml
+++ b/app/src/main/res/layout/fragment_tomorrow.xml
@@ -3,13 +3,26 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".TomorrowFragment">
+    android:background="@color/white">
 
-    <!-- TODO: Update blank fragment layout -->
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Tomorrow"
-        android:gravity="center"/>
+        android:layout_height="wrap_content"
+        android:text="Tomorrow's Menu"
+        android:textColor="@color/black"
+        android:textStyle="bold"
+        android:textAlignment="center"
+        android:textSize="30sp"
+        android:layout_marginBottom="30dp"
+        android:layout_marginTop="30dp"/>
+
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_marginTop="90dp"
+        android:id="@+id/recyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        tools:listitem="@layout/list_items"/>
+
 
 </FrameLayout>
