--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -13,7 +13,7 @@
 
     <item
         android:id="@+id/time"
-        android:title="Time"
+        android:title="Timming"
         android:icon="@drawable/baseline_access_time_24"/>
 
 
